--- a/Assets/IsoTools/CHANGELOG.txt
+++ b/Assets/IsoTools/CHANGELOG.txt
@@ -1,3 +1,9 @@
+-------------------
+-- Version 2.4.1 --
+-------------------
+
+Bug fixing​
+
 -----------------
 -- Version 2.4 --
 -----------------
