--- a/Assets/IsoTools/CHANGELOG.txt
+++ b/Assets/IsoTools/CHANGELOG.txt
@@ -1,4 +1,10 @@
 -------------------
+-- Version 2.4.2 --
+-------------------
+
+Bug fixing​
+
+-------------------
 -- Version 2.4.1 --
 -------------------
 
