--- a/Assets/IsoTools/Docs/CHANGELOG.txt
+++ b/Assets/IsoTools/Docs/CHANGELOG.txt
@@ -1,4 +1,10 @@
 -------------------
+-- Version X.X.X --
+-------------------
+
+Fix 5.4 warning
+
+-------------------
 -- Version 2.4.2 --
 -------------------
 
