--- a/ProjectStuff/IsoTools.org
+++ b/ProjectStuff/IsoTools.org
@@ -35,6 +35,8 @@
 **** TODO Возможность вывода баунда только для текущего объекта
 **** TODO Подсвечивать проникающие друг-в-друга объекты в редакторе
 **** TODO Возможность невидимых изометрических объектов без сортировки
+**** TODO Возможность задавать плоскость проекции изометрических координат
+**** TODO Было бы удобно иметь кнопку по округлению индексов позиции тайлов
 ** DONE Версия 3.0.1
 *** Баги
 **** DONE Проблемы с сериализацией дженерик классов
