--- a/ProjectStuff/IsoTools.org
+++ b/ProjectStuff/IsoTools.org
@@ -23,6 +23,7 @@
 ** Версия X.X.X
 *** Код
 **** Сэмпл полурогалика
+**** Подумать на тему статических объектов
 **** Рисовать баунды разными цветами, дабы было понятно где верх, где низ
 *** Баги
 **** При перемещении камеры тайлы по краям дергаются в сортировке
@@ -32,9 +33,12 @@
 ** TODO Версия 3.1.0
 *** Код
 **** TODO Поддержка TiledMap
+**** TODO Вынести поле для гравитации в IsoWorld
 **** TODO Возможность вывода баунда только для текущего объекта
 **** TODO Подсвечивать проникающие друг-в-друга объекты в редакторе
 **** TODO Возможность невидимых изометрических объектов без сортировки
+**** TODO Добавить ворнинг на использование IsoObject в качестве парента
+**** TODO Добавить возможность брать объект по позиции мыши без райкаста
 **** TODO Возможность задавать плоскость проекции изометрических координат
 **** TODO Было бы удобно иметь кнопку по округлению индексов позиции тайлов
 ** DONE Версия 3.0.1
