physics settings in IsoWorld!

--- a/ProjectStuff/IsoTools.org
+++ b/ProjectStuff/IsoTools.org
@@ -33,7 +33,6 @@
 ** TODO Версия 3.1.0
 *** Код
 **** TODO Поддержка TiledMap
-**** TODO Вынести поле для гравитации в IsoWorld
 **** TODO Возможность вывода баунда только для текущего объекта
 **** TODO Подсвечивать проникающие друг-в-друга объекты в редакторе
 **** TODO Возможность невидимых изометрических объектов без сортировки
@@ -41,6 +40,9 @@
 **** TODO Добавить возможность брать объект по позиции мыши без райкаста
 **** TODO Возможность задавать плоскость проекции изометрических координат
 **** TODO Было бы удобно иметь кнопку по округлению индексов позиции тайлов
+** DONE Версия 3.0.2
+*** Код
+**** DONE Вынести настройки физики в IsoWorld
 ** DONE Версия 3.0.1
 *** Баги
 **** DONE Проблемы с сериализацией дженерик классов
