--- a/ProjectStuff/IsoTools.org
+++ b/ProjectStuff/IsoTools.org
@@ -38,6 +38,7 @@
 **** TODO Возможность невидимых изометрических объектов без сортировки
 **** TODO Добавить ворнинг на использование IsoObject в качестве парента
 **** TODO Добавить возможность брать объект по позиции мыши без райкаста
+**** TODO Добавить скрипт камеры для слежения за изометрическим объектом
 **** TODO Возможность задавать плоскость проекции изометрических координат
 **** TODO Было бы удобно иметь кнопку по округлению индексов позиции тайлов
 ** DONE Версия 3.0.2
