todo and changelog

--- a/ProjectStuff/IsoTools.org
+++ b/ProjectStuff/IsoTools.org
@@ -40,7 +40,12 @@
 **** TODO Добавить возможность брать объект по позиции мыши без райкаста
 **** TODO Добавить скрипт камеры для слежения за изометрическим объектом
 **** TODO Возможность задавать плоскость проекции изометрических координат
-**** TODO Было бы удобно иметь кнопку по округлению индексов позиции тайлов
+**** Было бы удобно иметь кнопку по округлению индексов позиции тайлов
+** DONE Версия 3.0.3
+*** Код
+**** DONE Не рисовать gizmos вне камеры
+**** DONE Пофиксить новые ворнинги до 2017.3
+**** DONE Не снаппить по изо чаелдам
 ** DONE Версия 3.0.2
 *** Код
 **** DONE Вынести настройки физики в IsoWorld
