--- a/ProjectStuff/IsoTools.org
+++ b/ProjectStuff/IsoTools.org
@@ -40,7 +40,7 @@
 **** TODO Добавить возможность брать объект по позиции мыши без райкаста
 **** TODO Добавить скрипт камеры для слежения за изометрическим объектом
 **** TODO Возможность задавать плоскость проекции изометрических координат
-**** Было бы удобно иметь кнопку по округлению индексов позиции тайлов
+**** TODO Было бы удобно иметь кнопку по округлению индексов позиции тайлов
 ** DONE Версия 3.0.3
 *** Код
 **** DONE Не рисовать gizmos вне камеры
