todo and changelog

--- a/ProjectStuff/IsoTools.org
+++ b/ProjectStuff/IsoTools.org
@@ -41,6 +41,10 @@
 **** TODO Добавить скрипт камеры для слежения за изометрическим объектом
 **** TODO Возможность задавать плоскость проекции изометрических координат
 **** TODO Было бы удобно иметь кнопку по округлению индексов позиции тайлов
+** DONE Версия 3.0.4
+*** Баги
+**** DONE После Undo в редакторе исчезают объекты на сцене
+проблема была в неверном bounds из ParticleSystemRenderer
 ** DONE Версия 3.0.3
 *** Код
 **** DONE Не рисовать gizmos вне камеры
