--- a/ProjectStuff/IsoTools.org
+++ b/ProjectStuff/IsoTools.org
@@ -41,6 +41,7 @@
 **** TODO Добавить скрипт камеры для слежения за изометрическим объектом
 **** TODO Возможность задавать плоскость проекции изометрических координат
 **** TODO Было бы удобно иметь кнопку по округлению индексов позиции тайлов
+**** TODO Повороты коллайдеров (Nick Temple)
 ** DONE Версия 3.0.4
 *** Баги
 **** DONE После Undo в редакторе исчезают объекты на сцене
